Bug 127862 - FILEOPEN: DOC: Background colour lost on import in a writer file
Summary: FILEOPEN: DOC: Background colour lost on import in a writer file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-09-29 10:59 UTC by Peter Scott
Modified: 2019-11-03 15:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Scott 2019-09-29 10:59:21 UTC
Description:
I set the background colour on a writer file. If I export it as a pdf that file retains the colour. The .doc file I save does not. I set the colour both as a page format and as a section format.When I reopen the .doc file it is back to white background.

Steps to Reproduce:
1. Open a new writer file.
2. Set the background to a colour other than white, either in page format or section format.
3. Save the file as a .doc.
4. Close the file.
5. Reopen the file

Actual Results:
Background colour back to white

Expected Results:
Saved the colour with the file and reopened it with the chosen background colour


Reproducible: Always


User Profile Reset: No



Additional Info:
Using Windows 7 Pro 64 bit with Service Pack 1
Comment 1 Oliver Brinzing 2019-09-29 11:49:32 UTC
reproducible with:

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

but *not* reproducible with:

Version: 6.2.7.1 (x64)
Build-ID: 23edc44b61b830b7d749943e020e96f5a7df63bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 2 raal 2019-09-30 11:30:08 UTC
This seems to have begun at the below commit.
Adding Cc: to Michael Stahl, Justin Luth ; Could you possibly take a look at this one? Thanks
 063d2168748a7c5119a9f99142a892e7c60d99ab is the first bad commit
commit 063d2168748a7c5119a9f99142a892e7c60d99ab
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Apr 30 06:57:48 2019 -0700

    source bf8c8699f7ed09519db2041e1ec1554097e94ab4

    source bf8c8699f7ed09519db2041e1ec1554097e94ab4
    source 5879351aeb1935e2bf86fda59703f7d49fdeb6ed
    source 3d37463eec0c891243a8971a34903b2da01c9e24
    source 31ae7509003b1e650463ee1468c0b315ba13efe6
    source f6f53f76e15f5eecc5b6ce56e471c53cebfea8ad
    source cc899c6967238877f0094bcf00627145e484ffec
    source b593634d3cfbb2fc8522d99ce1c3f2a11445ea59

:040000 040000 42b6382698591d9f15a566927d126b63a4307fcc fde00b8bbabae215578f1367844987ca62551f20 M      instdir
Comment 3 Michael Stahl 2019-09-30 11:33:50 UTC
most likely this one?

commit cc899c6967238877f0094bcf00627145e484ffec

    tdf#101826 ww8import: Fly - don't convert XATTR back and forth
    
    In this case we are explicitly interested in textboxes,
    but any fly that accepts XATTR will now use that and skip
    the old RES_BACKGROUND.
    
    In the case of textbox import, the properties were being
    converted into RES_BACKGROUND and then back to XATTR again.
    Just copy the XATTR properties to the new FlySet instead.
    
    The ability to import XATTRs into a textbox was added to LO6.3
    with commit 15819181772d95963d16c1c2eaa9e51af81f7f68
Comment 4 Justin L 2019-10-01 07:35:40 UTC
(In reply to Michael Stahl (CIB) from comment #3)
> most likely commit cc899c6967238877f0094bcf00627145e484ffec
Confirmed. Proposed fix at https://gerrit.libreoffice.org/79912
Comment 5 Justin L 2019-10-01 12:50:29 UTC
Section colour: I tested that back to LO 5.3 and it seems like it has never worked for .doc or .docx. Not surprising because sections are implemented very differently between LO and Word. In Word 2003, I can only associate shading with paragraphs, not with a section. Likely the MS formats simply don't allow background colours connected with sections.

I briefly investigated to see if I could import the background colour initially as an XATTR, but quickly gave up when it pointed towards Escher/BLIP import libraries in msfilter. Not a simple task to get rid of this obsolete RES_BACKGROUND attribute.
Comment 6 Peter Scott 2019-10-01 14:15:29 UTC
Hi Justin

Clearly you know what you are talking about. I am now trying to think how I managed to save the background before. Did I do it through paragraph format? I was sure that it was through page/background or sections. However I bow to your better knowledge. I will try to do it through paragraph format. Thanks for your help

All the best

Peter
Comment 7 Justin L 2019-10-01 16:48:23 UTC
(In reply to Peter Scott from comment #6)
> Clearly you know what you are talking about.
Well definitely the Page Style background is supposed to work, so thanks for finding that regression and reporting it. That should be fixed shortly and I'll backport it to 6.3.x. The only thing clear here is that I caused the problem... :-)
Comment 8 Commit Notification 2019-10-02 09:40:18 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e3c1be1149440fdcfea452aadce0a523af83fe5a

tdf#127862 ww8import: page style - import XATTR if defined

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-10-02 13:57:05 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/b02252f1c8213bb0a01086c6eb58e3fdb957d6ad

tdf#127862 ww8import: page style - import XATTR if defined

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2019-10-03 08:49:32 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: c9336bfb6bbf6d73d3f23c124262ade30133448d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Justin Luth, thanks for fixing this issue!