tdf#127862 ww8import: page style - import XATTR if defined

...which fixes losing the background color of the page. That was
broken by LO63 commit cc899c6967238877f0094bcf00627145e484ffec
since an obsolete RES_BACKGROUND was not necessarily created.

Change-Id: I944a1b3f3df1468c283f93a49ffacfbd223fb392